# youtube-live-alert2

./: LICENSE  pyproject.toml
scraper/: pipelines.py
scraper/spiders/: ytch.py  ytchan.py
tests/: test_ytscrap.py
ytscrap/: client.py
